--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -17,11 +17,6 @@
                 <span><img src="{{site.baseurl}}/img/matrix-logo-update.png" alt="Logo"></span>{{ site.title }}
             </a>
         </div>
-		<style>
-			#search-box {
-				color: #FFF;
-			}
-		</style>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="{{ "/docs/quickstart/" | prepend: site.baseurl }}">Docs</a></li>
@@ -29,14 +24,11 @@
                 <li {% if page.sectionid=='download' %} class="active" {% endif %}><a href="https://github.com/ericzhng/matrix-library">GitHub</a></li>
             </ul>
             <div class="navbar-right">
-                <form class="navbar-form navbar-left">
-                    <div class="form-group has-feedback">
-                        <input id="search-box" type="search" class="form-control" placeholder="Search...">
-                        <i class="fa fa-search form-control-feedback"></i>
-                    </div>
-                </form>
                 <ul class="nav navbar-nav">
-                    <li><a href="{{ site.git_address }}"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+                    <li><a href="https://github.com/ericzhng/matrix-library.git"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+                    <li><a href="https://twitter.com/intent/user?screen_name=ericzhng"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.facebook.com/buaa.zhanghui/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/ericzhang2019/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
         </div>
