--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -25,10 +25,9 @@
             </ul>
             <div class="navbar-right">
                 <ul class="nav navbar-nav">
-                    <li><a href="https://github.com/ericzhng/matrix-library.git"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-                    <li><a href="https://twitter.com/intent/user?screen_name=ericzhng"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                    <li><a href="https://www.facebook.com/buaa.zhanghui/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/ericzhang2019/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                    <li><a href="https://github.com/ericzhng/"><i class="fa fa-github" aria-hidden="false"></i></a></li>
+                    <li><a href="https://ericzhng.github.io/"><i class="fa fa-address-card" aria-hidden="false"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/ericzhang2019/"><i class="fa fa-linkedin" aria-hidden="false"></i></a></li>
                 </ul>
             </div>
         </div>
