--- a/css/main.scss
+++ b/css/main.scss
@@ -71,7 +71,7 @@ body {
   // background-attachment: fixed;
   background-size: cover;
   background-position: center 36%;
-  //margin-top: -28px;
+  margin-top: -28px;
 }
 .page-content {
   padding-bottom: 20px;
