Add commit changes options

--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -27,7 +27,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="https://github.com/ericzhng/"><i class="fa fa-github" aria-hidden="false"></i></a></li>
                     <li><a href="https://www.linkedin.com/in/ericzhang2019/"><i class="fa fa-linkedin" aria-hidden="false"></i></a></li>
-                    <li><a href="https://ericzhng.github.io/"><i class="fa fa-address-card" aria-hidden="false"></i></a></li>
+                    <li><a href="https://ericzhng.github.io/"><i class="fa fa-user" aria-hidden="false"></i></a></li>
                 </ul>
             </div>
         </div>
