--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -17,9 +17,9 @@ layout: default
             <div style="clear:both;">
               <p class="text-center">
                 <br />
-                <!--<a target="_blank" href="{{site.git_edit_address}}/{{ page.path }}" class="btn btn-default githubEditButton" role="button">
+                <a target="_blank" href="{{site.git_edit_address}}/{{ page.path }}" class="btn btn-default githubEditButton" role="button">
                   <i class="fa fa-pencil fa-lg"></i> Improve this page
-                </a>-->
+                </a>
               </p>
             </div>
             <hr>
