--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,16 +1,16 @@
 <footer class="footer">
 	<style>
 		.special {
-			color: #ffe6e6;
+			color: #C0C0C0;
 		}
 		.special:hover {
-			color: #ffb3b3;
+			color: #C0C0C0;
+			text-decoration: underline;
 		}
 	</style>
     <div class="container">
         <p class="text-center">
-            {{ site.title }} by <a class="special" href="https://github.com/Ilyaki">Ilyaki</a> |
-            Website based on <a class="special" href="https://github.com/aksakalli/jekyll-doc-theme">Jekyll Doc Theme</a>
+            &copy; {{ site.time | date: '%Y' }} {{ site.name }}. Powered by <a class="special" href="https://github.com/Ilyaki">Ilyaki</a> using the <a class="special" href="https://github.com/aksakalli/jekyll-doc-theme">Jekyll Doc Theme.</a>
         </p>
         <!-- <p class="text-muted">Place sticky footer content here.</p> -->
     </div>
