--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -1,4 +1,4 @@
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<!-- <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> -->
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container navbar-container">
         <div class="navbar-header">
@@ -8,26 +8,25 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-		<style>
-			#titleid {
-				color: #FFCB0B;
-			}
-		</style>
-            <a id="titleid" class="navbar-brand" href="{{ site.baseurl }}/">
+            <a style="color:#FFCB0B;" class="navbar-brand" href="{{ site.baseurl }}/">
                 <span><img src="{{site.baseurl}}/img/matrix-logo-update.png" alt="Logo"></span>{{ site.title }}
             </a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="{{ "/docs/quickstart/" | prepend: site.baseurl }}">Docs</a></li>
+				
                 <li {% if page.sectionid=='blog' %} class="active" {% endif %}><a href="{{ site.posts.first.url | prepend: site.baseurl }}">Examples</a></li>
-                <li {% if page.sectionid=='download' %} class="active" {% endif %}><a href="https://github.com/ericzhng/matrix-library">GitHub</a></li>
+				
+                <li {% if page.sectionid=='github' %} class="active" {% endif %}><a href="https://github.com/ericzhng/matrix-library">GitHub</a></li>
+				
             </ul>
             <div class="navbar-right">
                 <ul class="nav navbar-nav">
                     <li><a href="https://github.com/ericzhng/"><i class="fa fa-github" aria-hidden="false"></i></a></li>
                     <li><a href="https://www.linkedin.com/in/ericzhang2019/"><i class="fa fa-linkedin" aria-hidden="false"></i></a></li>
                     <li><a href="https://ericzhng.github.io/"><i class="fa fa-user" aria-hidden="false"></i></a></li>
+					<span class=""></span>
                 </ul>
             </div>
         </div>
