--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -9,11 +9,7 @@ layout: default
         </div>
         <div class="col-md-8">
             <h1>{{ page.title }}</h1>
-            <div id="markdown-content-container">
-			
-			{{ content }}
-			
-			</div>
+            <div id="markdown-content-container">{{ content }}</div>
             <div style="clear:both;">
               <p class="text-center">
                 <br />
@@ -25,6 +21,5 @@ layout: default
             <hr>
             {% include section_nav.html %}
         </div>
-
     </div>
 </div>
