Fix some bugs, including inconsistency with nav-bar

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
 		}
 	</style>
     <div class="container">
-        <p class="text-center">
+        <p class="footer-text-center">
             &copy; {{ site.time | date: '%Y' }} {{ site.name }}. Powered by <a class="special" href="https://github.com/Ilyaki">Ilyaki</a> using the <a class="special" href="https://github.com/aksakalli/jekyll-doc-theme">Jekyll Doc Theme.</a>
         </p>
         <!-- <p class="text-muted">Place sticky footer content here.</p> -->
