--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -1,4 +1,4 @@
-<!-- <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> -->
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container navbar-container">
         <div class="navbar-header">
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
       </button>
             <a style="color:#FFCB0B;" class="navbar-brand" href="{{ site.baseurl }}/">
-                <span><img src="{{site.baseurl}}/img/matrix-logo-update.png" alt="Logo"></span>{{ site.title }}
+                <span><img src="{{site.baseurl}}/img/matrix-logo-rectangular.png" alt="Logo"></span>{{ site.title }}
             </a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
