Update as of Aug 27 2020

--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -18,8 +18,9 @@
 				
                 <li {% if page.sectionid=='blog' %} class="active" {% endif %}><a href="{{ site.posts.first.url | prepend: site.baseurl }}">Examples</a></li>
 				
-                <li {% if page.sectionid=='github' %} class="active" {% endif %}><a href="https://github.com/ericzhng/matrix-library">GitHub</a></li>
+                <li {% if page.sectionid=='github' %} class="active" {% endif %}><a href="https://github.com/ericzhng/matrix-library-lapack">GitHub LAPACK</a></li>
 				
+                <li {% if page.sectionid=='github' %} class="active" {% endif %}><a href="https://github.com/ericzhng/matrix-library-scalapack">GitHub ScaLAPACK</a></li>
             </ul>
             <div class="navbar-right">
                 <ul class="nav navbar-nav">
