--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -18,15 +18,15 @@
 				
                 <li {% if page.sectionid=='blog' %} class="active" {% endif %}><a href="{{ site.posts.first.url | prepend: site.baseurl }}">Examples</a></li>
 				
-                <li {% if page.sectionid=='github' %} class="active" {% endif %}><a href="https://github.com/ericzhng/matrix-library-lapack">GitHub LAPACK</a></li>
+                <li {% if page.sectionid=='github' %} class="active" {% endif %}><a href="https://github.com/ericzhng/matrix-library-lapack" target="_blank" rel="noopener noreferrer">GitHub LAPACK</a></li>
 				
-                <li {% if page.sectionid=='github' %} class="active" {% endif %}><a href="https://github.com/ericzhng/matrix-library-scalapack">GitHub ScaLAPACK</a></li>
+                <li {% if page.sectionid=='github' %} class="active" {% endif %}><a href="https://github.com/ericzhng/matrix-library-scalapack" target="_blank" rel="noopener noreferrer">GitHub ScaLAPACK</a></li>
             </ul>
             <div class="navbar-right">
                 <ul class="nav navbar-nav">
-                    <li><a href="https://github.com/ericzhng/"><i class="fa fa-github" aria-hidden="false"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/ericzhang2019/"><i class="fa fa-linkedin" aria-hidden="false"></i></a></li>
-                    <li><a href="https://ericzhng.github.io/"><i class="fa fa-user" aria-hidden="false"></i></a></li>
+                    <li><a href="https://github.com/ericzhng/" target="_blank" rel="noopener noreferrer"><i class="fa fa-github" aria-hidden="false"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/ericzhang2019/" target="_blank" rel="noopener noreferrer"><i class="fa fa-linkedin" aria-hidden="false"></i></a></li>
+                    <li><a href="https://ericzhng.github.io/" target="_blank" rel="noopener noreferrer"><i class="fa fa-user" aria-hidden="false"></i></a></li>
 					<span class=""></span>
                 </ul>
             </div>
